improve lintian validity

--- a/src/test/resources/expected/control
+++ b/src/test/resources/expected/control
@@ -7,3 +7,4 @@ Depends: tomcat7-common, libc6, adduser, java7-runtime-headless | java6-runtime-
 Installed-Size: 34
 Maintainer: Tobias Gesellchen <tobias@gesellix.de>
 Description: Test Control File
+ And here comes a very extended description.
