--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
+apply plugin: 'versions'
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 version = 1
 group = 'de.gesellix'
@@ -12,8 +16,11 @@ buildscript {
     maven {
       url 'http://jcenter.bintray.com'
     }
+    mavenLocal()
+    mavenCentral()
   }
   dependencies {
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.3'
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
   }
 }
@@ -34,6 +41,7 @@ configurations.all {
         'org.codehaus.plexus:plexus-utils': '1.5.15',
         'classworlds:classworlds': '1.1',
         'commons-httpclient:commons-httpclient': '3.1',
+        'org.hamcrest:hamcrest-core': '1.3',
         'org.slf4j:slf4j-api': '1.5.6'
     ]
 
@@ -46,6 +54,8 @@ dependencies {
   compile localGroovy()
 
   compile 'org.vafer:jdeb:1.0.1'
+
+  testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
 }
 
 test {
