--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.publish.maven.MavenPublication
+
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven'
@@ -52,15 +54,17 @@ configurations.all {
 dependencies {
   compile gradleApi()
   compile localGroovy()
+//  groovy 'org.codehaus.groovy:groovy-all:2.0.5'
 
   compile 'org.vafer:jdeb:1.0.1'
 
   testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
 }
 
-test {
+task testng(type: Test) {
   useTestNG()
 }
+check.dependsOn testng
 
 uploadArchives {
   repositories {
