minor cleanup, less lintian warnings

--- a/src/test/resources/packagename/control/control
+++ b/src/test/resources/packagename/control/control
@@ -9,5 +9,5 @@ Vcs-Browser: https://github.com/company/packagename
 Package: packagename
 Architecture: all
 Depends: tomcat7-common, java7-runtime-headless, lsb-base (>= 3.0-6), libc6, adduser, ucf
-Description: A Package Name
- And some very great detailed description
+Description: Package packagename provides an example of a package.
+ And we got some very great detailed description
