--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'versions'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-version = 4
+version = 5
 group = 'de.gesellix'
 archivesBaseName = 'gradle-debian-plugin'
 
@@ -57,6 +57,7 @@ dependencies {
 //  groovy 'org.codehaus.groovy:groovy-all:2.0.5'
 
   compile 'org.vafer:jdeb:1.0.1'
+  compile 'commons-lang:commons-lang:2.6'
 
   testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
 }
