--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,16 @@ configurations.all {
         'org.codehaus.plexus:plexus-utils': '1.5.15',
         'classworlds:classworlds': '1.1',
         'commons-httpclient:commons-httpclient': '3.1',
+        'commons-io:commons-io': '2.4',
+        'commons-codec:commons-codec': '1.6',
         'org.hamcrest:hamcrest-core': '1.3',
-        'org.slf4j:slf4j-api': '1.5.6'
+        'org.slf4j:slf4j-nop': '1.7.2',
+        'org.slf4j:slf4j-jdk14': '1.7.2',
+        'org.slf4j:slf4j-api': '1.7.2',
+        'org.slf4j:jcl-over-slf4j': '1.7.2',
+        'org.apache.ant:ant': '1.9.2',
+        'org.apache.ant:ant-launcher': '1.9.2',
+        'junit:junit': '4.11'
     ]
 
     force dependencyVersions.collect { k, v -> "$k:$v" }
