renamed plugin extension name from 'debPkgPlugin' to 'debian'

--- a/src/test/resources/gradle/build.gradle
+++ b/src/test/resources/gradle/build.gradle
@@ -20,7 +20,7 @@ publishing {
   }
 }
 
-debPkgPlugin {
+debian {
   packagename = "packagename"
   publications = ['mavenStuff']
   controlDirectory = "../packagename/control"
