playing with coveralls

--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,28 @@ buildscript {
     maven {
       url 'http://jcenter.bintray.com'
     }
+    maven {
+      url 'http://kt3k.github.io/repository/maven/release'
+    }
     mavenLocal()
     mavenCentral()
   }
   dependencies {
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.4'
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
+
+//    classpath 'net.saliman:gradle-cobertura-plugin:2.0.0'
+    classpath 'net.saliman:gradle-cobertura-plugin:1.1.2'
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:0.1.4'
   }
 }
 apply plugin: 'bintray'
+
+apply plugin: 'cobertura'
+apply plugin: 'coveralls'
+
+cobertura.coverageFormats = ['html', 'xml']
+cobertura.coverageSourceDirs = sourceSets.main.groovy.srcDirs
 
 repositories {
   mavenCentral()
