use gradle-1.8-all distributionUrl

--- a/build.gradle
+++ b/build.gradle
@@ -124,4 +124,5 @@ bintrayUpload.dependsOn(":build")
 
 task wrapper(type: Wrapper) {
   gradleVersion = '1.8'
+  distributionUrl = 'http://services.gradle.org/distributions/gradle-1.8-all.zip'
 }
