use current gradle 1.10 final

--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,6 @@ bintray {
 bintrayUpload.dependsOn(":build")
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '1.10-rc-2'
-  distributionUrl = 'http://services.gradle.org/distributions/gradle-1.10-rc-2-all.zip'
+  gradleVersion = '1.10'
+  distributionUrl = 'http://services.gradle.org/distributions/gradle-1.10-all.zip'
 }
