--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,14 @@ buildscript {
     maven {
       url 'http://kt3k.github.io/repository/maven/release'
     }
+    maven {
+      url "https://github.com/ben-manes/gradle-versions-plugin/raw/mvnrepo"
+    }
     mavenLocal()
     mavenCentral()
   }
   dependencies {
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.4'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.5-beta-1'
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
 
     classpath 'net.saliman:gradle-cobertura-plugin:1.1.2'
