--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'versions'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-version = 14
+version = '15-SNAPSHOT'
 group = 'de.gesellix'
 archivesBaseName = 'gradle-debian-plugin'
 
