--- a/build.gradle
+++ b/build.gradle
@@ -26,20 +26,17 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.5-beta-1'
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.5-beta-5'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
 
-    classpath 'net.saliman:gradle-cobertura-plugin:1.1.2'
-//    classpath 'net.saliman:gradle-cobertura-plugin:1.2.1'
-//    classpath 'net.saliman:gradle-cobertura-plugin:2.1.0'
-    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:0.1.5'
-//    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:0.1.6'
+    classpath 'net.saliman:gradle-cobertura-plugin:2.2.5'
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
   }
 }
-apply plugin: 'bintray'
+apply plugin: 'com.jfrog.bintray'
 
-apply plugin: 'cobertura'
-apply plugin: 'coveralls'
+apply plugin: 'net.saliman.cobertura'
+apply plugin: 'com.github.kt3k.coveralls'
 
 cobertura.coverageFormats = ['html', 'xml']
 cobertura.coverageSourceDirs = sourceSets.main.groovy.srcDirs
@@ -53,6 +50,8 @@ configurations.all {
     failOnVersionConflict()
 
     def dependencyVersions = [
+        'org.apache.httpcomponents:httpclient'  : '4.3',
+        'org.codehaus.groovy:groovy-all'        : '2.3.6',
         'org.codehaus.plexus:plexus-classworlds': '1.2-alpha-9',
         'org.codehaus.plexus:plexus-container-default': '1.0-alpha-30',
         'org.codehaus.plexus:plexus-interactivity-api': '1.0-alpha-6',
@@ -60,6 +59,8 @@ configurations.all {
         'classworlds:classworlds'               : '1.1',
         'commons-httpclient:commons-httpclient' : '3.1',
         'commons-io:commons-io'                 : '2.4',
+        'commons-lang:commons-lang'             : '2.4',
+        'commons-logging:commons-logging'       : '1.1.3',
         'commons-codec:commons-codec'           : '1.6',
         'org.hamcrest:hamcrest-core'            : '1.3',
         'org.slf4j:slf4j-nop'                   : '1.7.2',
@@ -86,7 +87,7 @@ dependencies {
   compile 'org.vafer:jdeb:1.1'
   compile 'commons-lang:commons-lang:2.6'
 
-  testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
+  testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
   testCompile 'cglib:cglib-nodep:2.2.2'
 }
 
@@ -133,6 +134,6 @@ bintray {
 bintrayUpload.dependsOn(":build")
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '1.11'
-  distributionUrl = 'http://services.gradle.org/distributions/gradle-1.11-all.zip'
+  gradleVersion = '2.1'
+  distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
