--- a/build.gradle
+++ b/build.gradle
@@ -27,19 +27,30 @@ buildscript {
   }
   dependencies {
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.5-beta-5'
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
 
-    classpath 'net.saliman:gradle-cobertura-plugin:2.2.5'
-    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
+//    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
+
+    classpath 'net.saliman:gradle-cobertura-plugin:1.1.2'
+//    classpath 'net.saliman:gradle-cobertura-plugin:2.2.4'
+
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:0.1.5'
+//    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.0'
   }
 }
-apply plugin: 'com.jfrog.bintray'
+apply plugin: 'bintray'
+//apply plugin: 'com.jfrog.bintray'
 
-apply plugin: 'net.saliman.cobertura'
-apply plugin: 'com.github.kt3k.coveralls'
+apply plugin: 'cobertura'
+//apply plugin: 'net.saliman.cobertura'
 
-cobertura.coverageFormats = ['html', 'xml']
-cobertura.coverageSourceDirs = sourceSets.main.groovy.srcDirs
+apply plugin: 'coveralls'
+//apply plugin: 'com.github.kt3k.coveralls'
+
+cobertura {
+  coverageFormats = ['html', 'xml']
+  coverageSourceDirs = sourceSets.main.groovy.srcDirs
+}
 
 repositories {
   mavenCentral()
@@ -50,29 +61,25 @@ configurations.all {
     failOnVersionConflict()
 
     def dependencyVersions = [
-        'org.apache.httpcomponents:httpclient'  : '4.3',
-        'org.codehaus.groovy:groovy-all'        : '2.3.6',
-        'org.codehaus.plexus:plexus-classworlds': '1.2-alpha-9',
+        'org.codehaus.plexus:plexus-classworlds'      : '1.2-alpha-9',
         'org.codehaus.plexus:plexus-container-default': '1.0-alpha-30',
         'org.codehaus.plexus:plexus-interactivity-api': '1.0-alpha-6',
-        'org.codehaus.plexus:plexus-utils'      : '1.5.15',
-        'classworlds:classworlds'               : '1.1',
-        'commons-httpclient:commons-httpclient' : '3.1',
-        'commons-io:commons-io'                 : '2.4',
-        'commons-lang:commons-lang'             : '2.4',
-        'commons-logging:commons-logging'       : '1.1.3',
-        'commons-codec:commons-codec'           : '1.6',
-        'org.hamcrest:hamcrest-core'            : '1.3',
-        'org.slf4j:slf4j-nop'                   : '1.7.2',
-        'org.slf4j:slf4j-jdk14'                 : '1.7.2',
-        'org.slf4j:slf4j-api'                   : '1.7.2',
-        'org.slf4j:jcl-over-slf4j'              : '1.7.2',
-        'org.apache.ant:ant'                    : '1.9.2',
-        'org.apache.ant:ant-launcher'           : '1.9.2',
-        'junit:junit'                           : '4.11',
-        'xerces:xmlParserAPIs'                  : '2.6.2',
-        'xerces:xercesImpl'                     : '2.6.2',
-        'xml-apis:xml-apis'                     : '2.0.2'
+        'org.codehaus.plexus:plexus-utils'            : '1.5.15',
+        'classworlds:classworlds'                     : '1.1',
+        'commons-httpclient:commons-httpclient'       : '3.1',
+        'commons-io:commons-io'                       : '2.4',
+        'commons-codec:commons-codec'                 : '1.6',
+        'org.hamcrest:hamcrest-core'                  : '1.3',
+        'org.slf4j:slf4j-nop'                         : '1.7.2',
+        'org.slf4j:slf4j-jdk14'                       : '1.7.2',
+        'org.slf4j:slf4j-api'                         : '1.7.2',
+        'org.slf4j:jcl-over-slf4j'                    : '1.7.2',
+        'org.apache.ant:ant'                          : '1.9.2',
+        'org.apache.ant:ant-launcher'                 : '1.9.2',
+        'junit:junit'                                 : '4.11',
+        'xerces:xmlParserAPIs'                        : '2.6.2',
+        'xerces:xercesImpl'                           : '2.6.2',
+        'xml-apis:xml-apis'                           : '2.0.2'
     ]
 
     force dependencyVersions.collect { k, v -> "$k:$v" }
@@ -87,7 +94,8 @@ dependencies {
   compile 'org.vafer:jdeb:1.1'
   compile 'commons-lang:commons-lang:2.6'
 
-  testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+  testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
+//  testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
   testCompile 'cglib:cglib-nodep:2.2.2'
 }
 
@@ -134,6 +142,6 @@ bintray {
 bintrayUpload.dependsOn(":build")
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '2.1'
+  gradleVersion = '1.12'
   distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
