update dependencies ("org.vafer:jdeb:1.1" -> "org.vafer:jdeb:1.4")

--- a/src/test/resources/gradle/build.gradle
+++ b/src/test/resources/gradle/build.gradle
@@ -13,7 +13,7 @@ repositories {
 publishing {
   publications {
     mavenStuff(MavenPublication) {
-      artifact new File("${projectDir}/../inputfiles/artifact.war")
+      artifact file("${projectDir}/../inputfiles/artifact.war")
     }
   }
 }
