--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
-apply plugin: 'versions'
+apply plugin: 'com.github.ben-manes.versions'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -13,39 +13,20 @@ archivesBaseName = 'gradle-debian-plugin'
 
 buildscript {
   repositories {
-    maven {
-      url 'http://jcenter.bintray.com'
-    }
-    maven {
-      url 'http://kt3k.github.io/repository/maven/release'
-    }
-    maven {
-      url "https://github.com/ben-manes/gradle-versions-plugin/raw/mvnrepo"
-    }
+    jcenter()
     mavenLocal()
     mavenCentral()
   }
   dependencies {
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.5-beta-5'
-
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
-//    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
-
-    classpath 'net.saliman:gradle-cobertura-plugin:1.1.2'
-//    classpath 'net.saliman:gradle-cobertura-plugin:2.2.4'
-
-    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:0.1.5'
-//    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.0'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
+    classpath 'net.saliman:gradle-cobertura-plugin:2.2.8'
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
   }
 }
-apply plugin: 'bintray'
-//apply plugin: 'com.jfrog.bintray'
-
-apply plugin: 'cobertura'
-//apply plugin: 'net.saliman.cobertura'
-
-apply plugin: 'coveralls'
-//apply plugin: 'com.github.kt3k.coveralls'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'net.saliman.cobertura'
+apply plugin: 'com.github.kt3k.coveralls'
 
 cobertura {
   coverageFormats = ['html', 'xml']
@@ -61,25 +42,11 @@ configurations.all {
     failOnVersionConflict()
 
     def dependencyVersions = [
-        'org.codehaus.plexus:plexus-classworlds'      : '1.2-alpha-9',
-        'org.codehaus.plexus:plexus-container-default': '1.0-alpha-30',
-        'org.codehaus.plexus:plexus-interactivity-api': '1.0-alpha-6',
-        'org.codehaus.plexus:plexus-utils'            : '1.5.15',
-        'classworlds:classworlds'                     : '1.1',
-        'commons-httpclient:commons-httpclient'       : '3.1',
-        'commons-io:commons-io'                       : '2.4',
-        'commons-codec:commons-codec'                 : '1.6',
-        'org.hamcrest:hamcrest-core'                  : '1.3',
-        'org.slf4j:slf4j-nop'                         : '1.7.2',
-        'org.slf4j:slf4j-jdk14'                       : '1.7.2',
-        'org.slf4j:slf4j-api'                         : '1.7.2',
-        'org.slf4j:jcl-over-slf4j'                    : '1.7.2',
-        'org.apache.ant:ant'                          : '1.9.2',
-        'org.apache.ant:ant-launcher'                 : '1.9.2',
-        'junit:junit'                                 : '4.11',
-        'xerces:xmlParserAPIs'                        : '2.6.2',
-        'xerces:xercesImpl'                           : '2.6.2',
-        'xml-apis:xml-apis'                           : '2.0.2'
+        'org.codehaus.plexus:plexus-classworlds': '2.5.2',
+        'org.codehaus.plexus:plexus-utils'      : '3.0.20',
+        'org.apache.maven:maven-core'           : '3.0.4',
+        'org.apache.maven:maven-plugin-api'     : '3.0.4',
+        'junit:junit'                           : '4.11'
     ]
 
     force dependencyVersions.collect { k, v -> "$k:$v" }
@@ -89,13 +56,11 @@ configurations.all {
 dependencies {
   compile gradleApi()
   compile localGroovy()
-//  groovy 'org.codehaus.groovy:groovy-all:2.0.5'
 
-  compile 'org.vafer:jdeb:1.1'
+  compile 'org.vafer:jdeb:1.4'
   compile 'commons-lang:commons-lang:2.6'
 
-  testCompile 'org.spockframework:spock-core:0.7-groovy-1.8'
-//  testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+  testCompile 'org.spockframework:spock-core:1.0-groovy-2.3'
   testCompile 'cglib:cglib-nodep:2.2.2'
 }
 
@@ -142,6 +107,6 @@ bintray {
 bintrayUpload.dependsOn(":build")
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '1.12'
+  gradleVersion = '2.5'
   distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
