--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ language: java
 jdk: openjdk7
 env:
 - TERM=dumb
-script: ./gradlew clean build cobertura coveralls
+#script: ./gradlew clean build cobertura coveralls
+script: ./gradlew clean build
