--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.github.ben-manes.versions'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-version = 15
+version = '16'
 group = 'de.gesellix'
 archivesBaseName = 'gradle-debian-plugin'
 
