--- a/build.gradle
+++ b/build.gradle
@@ -14,27 +14,14 @@ archivesBaseName = 'gradle-debian-plugin'
 buildscript {
   repositories {
     jcenter()
-    mavenLocal()
     mavenCentral()
   }
   dependencies {
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
-    classpath 'net.saliman:gradle-cobertura-plugin:2.2.8'
-    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
   }
 }
 apply plugin: 'com.jfrog.bintray'
-apply plugin: 'net.saliman.cobertura'
-apply plugin: 'com.github.kt3k.coveralls'
-
-cobertura {
-  // this is due to https://github.com/stevesaliman/gradle-cobertura-plugin/issues/81
-  coberturaVersion = '2.0.3'
-
-  coverageFormats = ['html', 'xml']
-  coverageSourceDirs = sourceSets.main.groovy.srcDirs
-}
 
 repositories {
   mavenCentral()
@@ -48,6 +35,7 @@ configurations.all {
         'junit:junit'                           : '4.11',
         'org.apache.maven:maven-core'           : '3.0.4',
         'org.apache.maven:maven-plugin-api'     : '3.0.4',
+        'org.codehaus.groovy:groovy-all'        : '2.4.7',
         'org.codehaus.plexus:plexus-classworlds': '2.5.2',
         'org.codehaus.plexus:plexus-utils'      : '3.0.20',
         'xerces:xmlParserAPIs'                  : '2.6.2',
@@ -66,7 +54,7 @@ dependencies {
   compile 'org.vafer:jdeb:1.4'
   compile 'commons-lang:commons-lang:2.6'
 
-  testCompile 'org.spockframework:spock-core:1.0-groovy-2.3'
+  testCompile 'org.spockframework:spock-core:1.2-groovy-2.4'
   testCompile 'cglib:cglib-nodep:2.2.2'
 }
 
@@ -113,6 +101,6 @@ bintray {
 bintrayUpload.dependsOn(":build")
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '2.5'
-  distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
+  gradleVersion = '3.0'
+  distributionUrl = "https://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
 }
