--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,16 @@
-apply plugin: 'java'
-apply plugin: 'groovy'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-apply plugin: 'com.github.ben-manes.versions'
-
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
-
-version = '16'
-group = 'de.gesellix'
-archivesBaseName = 'gradle-debian-plugin'
-
-buildscript {
-  repositories {
-    jcenter()
-    mavenCentral()
-  }
-  dependencies {
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
-  }
+plugins {
+  id("groovy")
+  id("maven")
+  id("maven-publish")
+  id("com.github.ben-manes.versions") version "0.38.0"
 }
-apply plugin: 'com.jfrog.bintray'
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+version = "16"
+group = "de.gesellix"
+archivesBaseName = "gradle-debian-plugin"
 
 repositories {
   mavenCentral()
@@ -32,36 +21,28 @@ configurations.all {
     failOnVersionConflict()
 
     def dependencyVersions = [
-        'junit:junit'                           : '4.11',
-        'org.apache.maven:maven-core'           : '3.0.4',
-        'org.apache.maven:maven-plugin-api'     : '3.0.4',
-        'org.codehaus.groovy:groovy-all'        : '2.5.4',
-        'org.codehaus.plexus:plexus-classworlds': '2.5.2',
-        'org.codehaus.plexus:plexus-utils'      : '3.0.20',
-        'xerces:xmlParserAPIs'                  : '2.6.2',
-        'xerces:xercesImpl'                     : '2.6.2',
-        'xml-apis:xml-apis'                     : '2.0.2'
+        "org.codehaus.plexus:plexus-classworlds": "2.5.2",
+        "org.codehaus.plexus:plexus-utils"      : "3.0.20",
     ]
-
     force dependencyVersions.collect { k, v -> "$k:$v" }
   }
 }
 
 dependencies {
-  compile gradleApi()
-  compile localGroovy()
+  compile(gradleApi())
+  compile(localGroovy())
 
-  compile 'org.vafer:jdeb:1.4'
-  compile 'commons-lang:commons-lang:2.6'
+  compile("org.vafer:jdeb:1.4")
+  compile("commons-lang:commons-lang:2.6")
 
-  testCompile 'org.spockframework:spock-core:1.3-groovy-2.5'
-  testCompile 'cglib:cglib-nodep:2.2.2'
+  testCompile("org.spockframework:spock-core:1.3-groovy-2.5")
+  testCompile("cglib:cglib-nodep:3.3.0")
 }
 
 uploadArchives {
   repositories {
     mavenDeployer {
-      repository(url: 'file:./lib')
+      repository(url: "file:./lib")
     }
   }
 }
@@ -74,24 +55,23 @@ publishing {
   }
 }
 
-ext.dry = false
-bintray {
-  user = System.env.BINTRAY_USER ?: project["bintray.user"]
-  key = System.env.BINTRAY_API_KEY ?: project["bintray.key"]
-  publications = ['plugin']
-  pkg {
-    repo = 'gradle-plugins'
-    //userOrg = 'myorg' // an optional organization name when the repo belongs to one of the user's orgs
-    name = 'gradle-debian-plugin'
-    desc = 'create debian packages with gradle'
-    licenses = ['Apache-2.0']
-    labels = []
-  }
-  dryRun = dry
-}
-bintrayUpload.dependsOn(":build")
+//bintray {
+//  user = System.env.BINTRAY_USER ?: project["bintray.user"]
+//  key = System.env.BINTRAY_API_KEY ?: project["bintray.key"]
+//  publications = ['plugin']
+//  pkg {
+//    repo = 'gradle-plugins'
+//    //userOrg = 'myorg' // an optional organization name when the repo belongs to one of the user's orgs
+//    name = 'gradle-debian-plugin'
+//    desc = 'create debian packages with gradle'
+//    licenses = ['Apache-2.0']
+//    labels = []
+//  }
+//  dryRun = dry
+//}
+//bintrayUpload.dependsOn(":build")
 
-task updateWrapper(type: Wrapper) {
-  gradleVersion = '5.2.1'
+wrapper {
+  gradleVersion = "6.8.3"
   distributionType = Wrapper.DistributionType.ALL
 }
