--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,19 +8,27 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 1
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 8
+          cache: 'gradle'
       - name: build publish
-        run: ./gradlew clean build publish -x validatePomFileForPluginMavenPublication -x publishPluginMavenPublicationToGitHubPackagesRepository --no-daemon --info --stacktrace
-        timeout-minutes: 10
+        run: ./gradlew clean build publish -x validatePomFileForPluginMavenPublication -x publishPluginMavenPublicationToGitHubPackagesRepository --info --stacktrace
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SIGNING_KEY }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.GPG_SIGNING_PASSWORD }}
+      - name: Publish Test Report
+        if: ${{ always() }}
+        uses: scacap/action-surefire-report@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          report_paths: '**/build/test-results/test/TEST-*.xml'
 ...
