--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,23 +10,29 @@ jobs:
   ci-build:
     strategy:
       matrix:
-#        os: [ ubuntu-latest ]
-#        os: [ ubuntu-latest, windows-latest ]
         os: [ ubuntu-latest, windows-latest, macos-latest ]
         java: [ 8 ]
-#        java: [ 8, 11, 14 ]
+#        java: [ 8, 11, 17 ]
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 1
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: ${{ matrix.java }}
+          cache: 'gradle'
       - name: java version
         run: java -version
       - name: clean build
         run: ./gradlew clean build -x validatePomFileForPluginMavenPublication --no-daemon --info --stacktrace
-        timeout-minutes: 10
+      - name: Publish Test Report
+        if: ${{ always() }}
+        uses: scacap/action-surefire-report@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          report_paths: '**/build/test-results/test/TEST-*.xml'
 ...
