Validate only the real Maven POMs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: java version
         run: java -version
       - name: clean build
-        run: ./gradlew clean build -x validatePomFileForPluginMavenPublication --no-daemon --info --stacktrace
+        run: ./gradlew clean build --no-daemon --info --stacktrace
       - name: Publish Test Report
         if: ${{ always() }}
         uses: scacap/action-surefire-report@v1
