--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: 8
           cache: 'gradle'
       - name: build publish
-        run: ./gradlew clean build publish -x validatePomFileForPluginMavenPublication -x publishPluginMavenPublicationToGitHubPackagesRepository --info --stacktrace
+        run: ./gradlew clean build publish -x publishPluginMavenPublicationToGitHubPackagesRepository --info --stacktrace
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SIGNING_KEY }}
