--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        java: [ 8 ]
-#        java: [ 8, 17 ]
+        java: [ 8, 17 ]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
     steps:
