--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: 8
+          java-version: '11'
           cache: 'gradle'
       - name: build publish
         run: ./gradlew clean build publishToGitHubPackages --info --stacktrace
